CHANGELOG - ZIKULA 1.3.6
------------------------

Fixes:
- Fixed Zikula_Doctrine2_Entity_Category::toArray fails when used on proxied category

Features:
- Update jQuery-UI to 1.9.2
- Zikula Form - automatically set proper form enctype when upload input is used
- Added ModUtil::getModuleImagePath() for getting the admin image of a module

CHANGELOG - ZIKULA 1.3.5
------------------------

Fixes:
- Fixed return of DBUtil::selectExpandedObjectCount(), should not return false for 0 count (issue #512)
- Fixed error related to wrong case use in the Mobile theme (issue #529)
- Fixed ValidationUtil::validateField() return if a validation error for given field already exists (issue #534)
- Fixed JSCCUtil attempting (incorrectly) to combine remote scripts/styles (refs #435)
- Fixed minor typo in UserUtil::loginUsing() that prevented correct usage of function
- Fixed issue with setting active panel by element ID in Zikula.UI.Panels
- Fixed display of translated date in jQuery datepicker

Features:
- Added development/debug email mode
- Added basic setup for jQuery ajax to pass csfr token checks
- Added new option for Zikula UI Windows - autoClose
- Update jQuery to 1.8.3
- Mark active item in modulelinks
- Mobile Theme: Changed blockposition in home.tpl to 'mobile'
- Added thumbnail management features to Imagine plugin
- Refactor Mailer module to use Zikula Form

CHANGELOG - ZIKULA 1.3.4
------------------------

- Update jQuery-UI to 1.8.23
- Update jQuery to 1.8.1
- Fixed invalid URL send in Password recovery (issue #443)
- Fixed users module failing to send password recovery (admin) (issue #459)
- Fixed category management migration 1.2.6 -> 1.3. The display_name and display_desc are updated fine during upgrade from Zikula 12x to Zikula 134 (issue #69)
- Fixed checks in DateUtil::getDateFormatData (issue #198)
- Added message about clearing the database when re-install is needed (issue #200)